--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19670,3 +19670,48 @@ readers do not read off random characters that represent icons */
   padding-left: 15px;
 }
 
+.portfolio {
+  padding-top: 80px;
+  display: flex;
+  justify-content: center;
+}
+
+.portfolio__content {
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.portfolio__content h2 {
+  font-size: 25px;
+  font-weight: 800;
+  font-family: "Michroma", sans-serif;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.portfolio__media {
+  display: flex;
+  height: 266px;
+  flex: 1;
+}
+
+.portfolio__media picture:first-child {
+  padding-right: 50px;
+}
+
+.portfolio__media picture {
+  width: 100%;
+  height: 100%;
+}
+
+.portfolio__media img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
