--- a/resources/sass/_products.scss
+++ b/resources/sass/_products.scss
@@ -4,6 +4,7 @@
 	justify-content: center;
 
 	&__content	{
+		padding-top:80px;
 		display: flex;
 		flex-direction: column;
 		width: 75%;
@@ -23,14 +24,36 @@
 		height: 3px;
 		margin-left: auto;
 		margin-right: auto;
-		background-color:#1E2857;
+		background-color: $darkblue;
 		border: 0 none;
 		margin-bottom:50px;
 		}
 	}
 
 	&__main	{
+		padding-top: 30px;
 		display: flex;
+		flex: 1;
+
+		h4 {
+		font-size: 18px;
+		font-family: 'Montserrat', serif;
+		font-weight: 700;
+		color: $darkblue;
+		}
+
+		span {
+			margin-bottom: 15px;
+			color: $darkblue;
+		}
+
+		a {
+			text-decoration: none;
+		}
+
+		p {
+			font-size: 14px;
+		}
 	}
 
 	&__nmb	{
